Comment out border-radius in container styles
Comment out the border-radius property in the CSS.

--- a/exp01.html
+++ b/exp01.html
@@ -46,7 +46,7 @@
             padding: 2rem;
             text-align: center;
             background: rgba(0, 0, 0, 0.6);
-            border-radius: 16px;
+            /* border-radius: 16px; */
             margin: 2rem;
             backdrop-filter: blur(4px);
         }
