Add ripple background div to exp01.html

--- a/exp01.html
+++ b/exp01.html
@@ -71,7 +71,7 @@
 <body>
     
     <div class="pattern-overlay"></div>
-
+<div class="ripple-bg"></div>
     <div class="container">
         <div class="sec1">
             <div class="title">
